# ComfyUI-segment-anything-2

./: load_model.py  nodes.py  pyproject.toml  readme.md  requirements.txt
examples/: florence_segment_2.json  image_batch_bbox_segment.json  points_segment_example.json  points_segment_video_example.json  test.json
sam2/: __init__.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
sam2/modeling/: sam2_base.py
sam2/modeling/sam/: transformer.py
sam2/utils/: misc.py  transforms.py
